--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -2,9 +2,8 @@
   <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <h2 class="page-header light-text">Products</h2>
     <div class="row placeholders">
-        <!--
-          <div class="col-lg-8">  CENTER ON COMPUTER SCREEN
-          -->
+      <div class="col-lg-8">
+
         <div class="container">
           <div class="panel-container">
             <div class="panel panel-default">
@@ -50,7 +49,7 @@
             </div>
           </div>
         </div>
-      <!--</div>-->
+      </div>
     </div>
   </div>
 </div>
@@ -75,7 +74,7 @@
       <div class ="col-lg-6">
         <label>Unit Price</label>
         <input class="form-control" ng-model="unitPrice" placeholder="ex. 4.50">
-        <small class="text-muted">Maximum 3 characters</small>
+        <small class="text-muted">Maximum 5 characters</small>
       </div>
       </fieldset>
 
