--- a/src/views/dashboard.default.supply-chain.menu.html
+++ b/src/views/dashboard.default.supply-chain.menu.html
@@ -1,9 +1,8 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <h2 class="page-header light-text">Supply Chains</h2>
     <div class="row placeholders">
-      <!--
-        <div class="col-lg-8">  CENTER ON COMPUTER SCREEN
-        -->
+      <div class="col-lg-8">
+
             <div class="container">
                 <div class="panel-container">
                     <div class="panel panel-default">
@@ -29,7 +28,7 @@
                                             <tr ng-repeat="supplyChain in supplyChains track by $index">
                                                 <td>{{$index + 1}}</td>
                                                 <td>{{supplyChain.name}}</td>
-                                                <td>{{supplyChain.dateCreated.substring(0,10)}}</td>
+                                                <td>{{supplyChain.dateCreated | date: 'short'}}</td>
                                                 <td>
                                                   <button ng-click="editSupplyChain(supplyChain)" class="btn-dashboard">View/Edit</button>
                                                   <!-- <button ng-click="deleteSupplyChain(supplyChain)" class="btn-dashboard-red">Delete</button> -->
@@ -42,8 +41,8 @@
                         </div>
                     </div>
                 </div>
-                <!--
-            </div>-->
+
+            </div>
         </div>
     </div>
 </div>
