--- a/src/views/dashboard.default.inventory.menu.html
+++ b/src/views/dashboard.default.inventory.menu.html
@@ -1,9 +1,8 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
   <h2 class="page-header light-text">Track Inventory</h2>
   <div class="row placeholders">
-    <!--
-      <div class="col-lg-8">  CENTER ON COMPUTER SCREEN
-      -->
+    <div class="col-lg-8">
+
       <div ng-controller="TrackInventoryMenuCtrl" class="container">
 
         <div class="panel-container">
@@ -23,7 +22,7 @@
                     <tr ng-repeat="supplyChain in supplyChains track by $index">
                       <td>{{$index + 1}}</td>
                       <td>{{supplyChain.name}}</td>
-                      <td>{{supplyChain.dateCreated.substring(0,10)}}</td>
+                      <td>{{supplyChain.dateCreated | date: 'short'}}</td>
                       <td>
                         <div class="alignright">
                           <button ng-click="setSupplyChain(supplyChain)" class="btn-dashboard">View/Edit</button>
@@ -37,7 +36,7 @@
           </div>
         </div>
       </div>
-    <!--</div>-->
+    </div>
   </div>
 </div>
 </div>
