--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -3,21 +3,21 @@
   <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <h2 class="page-header light-text">Manage Orders</h2>
     <div class="row placeholders">
-      <!--<div class="col-lg-8">-->
+      <div class="col-lg-8">
         <div class="container">
           <div class="panel-container">
-<!-- DELETE FOR DEMO
+
             <div class="panel panel-default">
               <div class="panel-body alignleft">
 
+                <button ng-click="addOrder()" class="btn-dashboard-green">Add Invoice</button>
                 <button ng-click="addStage()" class="btn-dashboard">Print Invoice</button>
                 <button ng-click="editStage()" class="btn-dashboard">Edit Order</button>
-                <button class="btn-dashboard">View Details</button>
-                <button class="btn-dashboard"><i class = "fa fa-filter"></i></button>
                 <input type="text" name="search" placeholder="Search for an item" class="search">
 
               </div>
-            </div>  -->
+            </div>
+
             <div class="panel panel-body">
               <!--
               <div class="panel-scroll">-->
@@ -38,7 +38,7 @@
                         <td>{{$index+1}}</td>
                         <td>Cash</td>
                         <td>Outstanding</td>
-                        <td>{{order.date | date:'hh:mm a | yyyy-MM-dd ' }}</td>
+                        <td>{{order.date | date:'short' }}</td>
                         <td>${{totals[$index]}}</td>
                         <td>
                           <div class="alignright">
@@ -49,7 +49,7 @@
                     </tbody>
                   </table>
                 </div>
-              <!--</div>-->
+              </div>
             </div>
           </div>
         </div>
@@ -107,4 +107,87 @@
     <div class="modal-footer">
         <button class="btn-dashboard-green" type="button" ng-click="dismiss()">OK</button>
     </div>
+</script>
+
+
+<!-- TODO: Manual Add Invoice Form -->
+<script type="text/ng-template" id="addOrderModal.html">
+
+  <div class="modal-header">
+    <h3 class="modal-title text-center">Add an Order/Invoice</h3>
+  </div>
+  <div class ="col-lg-12">
+  <div class="modal-body">
+    <form>
+    <fieldset class="form-group">
+      <div class ="col-lg-6">
+        <label>Product Name(s)</label>
+          <input class="form-control" ng-model="name" placeholder="ex. Salmon, Cod, Halibut">
+       </div>
+
+       <div class ="col-lg-6">
+         <label>Unit Price</label>
+           <input class="form-control" ng-model="unitPrice" placeholder="ex. $20.99/lb">
+           <small class="text-muted">Maximum 10 characters</small>
+        </div>
+</fieldset>
+<fieldset class="form-group">
+            <div class ="col-lg-6">
+              <label>Quantity</label>
+                <input class="form-control" ng-model="quantity" placeholder="ex. Salmon">
+                <small class="text-muted">Maximum 8 characters</small>
+             </div>
+             <div class ="col-lg-6">
+               <label>Total Amount</label>
+                 <input class="form-control" ng-model="totalAmount" placeholder="ex. $17.38">
+                 <small class="text-muted">Maximum 10 characters</small>
+              </div>
+</fieldset>
+
+      <fieldset class="form-group">
+      <div class ="col-lg-6">
+        <label>Invoice Number</label>
+        <input class="form-control" ng-model="invoiceNum" placeholder="ex. 109372">
+        <small class="text-muted">Maximum 20 characters.</small>
+      </div>
+      <div class ="col-lg-6">
+        <label>Payment Method</label>
+        <input class="form-control" ng-model="payMethod" placeholder="ex. Credit">
+        <small class="text-muted">Maximum 20 characters</small>
+      </div>
+      </fieldset>
+
+      <fieldset class="form-group">
+        <div class ="col-lg-6">
+          <label>Status</label>
+          <input class="form-control" ng-model="status" placeholder="ex. Outstanding">
+          <small class="text-muted">Maximum 20 characters</small>
+        </div>
+
+        <div class ="col-lg-6">
+          <label>Date and Time</label>
+          <input class="form-control" ng-model="dateTime" placeholder="ex. 12:44 PM, 2016-01-14">
+          <small class="text-muted">HH:MM PM, YYYY-MM-DD</small>
+        </div>
+        </fieldset>
+
+
+<!--
+      <fieldset class="form-group">
+      <div class ="col-lg-12">
+        <label>Description</label>
+        <input class="form-control" ng-model="description" placeholder="Enter a short product description">
+        <small class="text-muted">Maximum 100 characters</small>
+      </div>
+      </fieldset>-->
+    </form>
+   </div>
+   </div>
+
+  <div class="modal-footer">
+  <div class="alignright">
+  <button type="submit" class="btn-dashboard-green" ng-click="ok()">Submit</button>
+  <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
+  </div>
+  </div>
 </script>
