--- a/src/views/dashboard.default.supply-chain.builder.html
+++ b/src/views/dashboard.default.supply-chain.builder.html
@@ -5,14 +5,14 @@
     <div class="modal-body">
         <form>
             <fieldset class="form-group">
-                <div class="col-lg-8 col-lg-offset-2">
+                <div class="col-lg-12">
                     <label>Name of Supply Chain Stage</label>
                     <input class="form-control" ng-model="name" placeholder="i.e. Processing Plant 1">
                     <small class="text-muted">Maximum 30 characters.</small>
                 </div>
             </fieldset>
             <fieldset class="form-group">
-                <div class="col-lg-8 col-lg-offset-2">
+                <div class="col-lg-12">
                     <label>Previous Stage</label>
                     <select ng-model="prev" ng-options="stage as stage.self.name for stage in stages" class="form-control">
                     </select>
