form dropdown design changed

--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -81,7 +81,7 @@
       <fieldset class="form-group">
         <div class ="col-lg-6">
               <label>Units</label><br>
-              <select ng-model="unit" name="mydropdown" class="dropdown">
+              <select ng-model="unit" name="mydropdown" class="form-control">
                 <option value="lb">Pounds (Lbs.)</option>
                 <option value="kg">Kilograms (Kgs.)</option>
                 <option value="unit">Per Unit of Fish</option>
@@ -157,7 +157,7 @@
       <fieldset class="form-group">
         <div class ="col-lg-6">
               <label>Units</label><br>
-              <select ng-model="unit" name="mydropdown" class="dropdown">
+              <select ng-model="unit" name="mydropdown" class="form-control">
                 <option value="lb">Pounds (Lbs.)</option>
                 <option value="kg">Kilograms (Kgs.)</option>
                 <option value="unit">Per Unit of Fish</option>
