--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -83,8 +83,6 @@
 
     <div class="modal-body">
         <div class="panel panel-default">
-            <!-- <div class="panel-heading">
-      <h3 class="panel-title">Supply Chain Representation</h3></div> -->
             <div class="panel-body">
                 <div class="table-responsive">
                     <table class="table table-striped">
@@ -134,7 +132,7 @@
                 <div class="col-lg-6">
                     <label>Product Type</label>
                     <br>
-                    <select class="from-control" ng-model="selectedProduct" ng-options="product.name for product in products"></select>
+                    <select class="form-control" ng-model="selectedProduct" ng-options="product.name for product in products"></select>
                     <!--<select ng-model="selectedProduct" name="mydropdown" class="dropdown">
                  <option ng-value="{{product}}" ng-repeat="product in products track by $index">{{product.name}}</option>
              </select>-->
@@ -212,7 +210,7 @@
                     <label>Product Type</label>
                     <br>
                     <select class="from-control" ng-model="selectedProduct" ng-options="product.name for product in products"></select>
-                    <!--<select ng-model="selectedProduct" name="mydropdown" class="dropdown">
+                    <!--<select ng-model="selectedProduct" name="mydropdown" class="form-control">
                  <option ng-value="{{product}}" ng-repeat="product in products track by $index">{{product.name}}</option>
              </select>-->
                     <br>
