--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -1,4 +1,3 @@
-
 <div ng-controller="OrderDisplayCtrl">
   <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <h2 class="page-header light-text">Manage Orders</h2>
@@ -21,38 +20,38 @@
             <div class="panel panel-body">
               <!--
               <div class="panel-scroll">-->
-                <div class="table-responsive">
-                  <table class="table tableWhite">
-                    <thead>
-                      <tr>
-                        <th>Invoice #</th>
-                        <th>Payment Method</th>
-                        <th>Status</th>
-                        <th>Date and Time </th>
-                        <th>Total Amount</th>
-                        <th></th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr ng-repeat="order in orders track by $index">
-                        <td>{{$index+1}}</td>
-                        <td>Cash</td>
-                        <td>Outstanding</td>
-                        <td>{{order.date | date:'short' }}</td>
-                        <td>${{totals[$index]}}</td>
-                        <td>
-                          <div class="alignright">
-                            <button ng-click="viewOrderDetail(order)" class="btn-dashboard">View Details</button>
-                          </div>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
+              <div class="table-responsive">
+                <table class="table tableWhite">
+                  <thead>
+                    <tr>
+                      <th>Invoice #</th>
+                      <th>Payment Method</th>
+                      <th>Status</th>
+                      <th>Date and Time </th>
+                      <th>Total Amount</th>
+                      <th></th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr ng-repeat="order in orders track by $index">
+                      <td>{{$index+1}}</td>
+                      <td>Cash</td>
+                      <td>Outstanding</td>
+                      <td>{{order.date | date:'short' }}</td>
+                      <td>${{totals[$index]}}</td>
+                      <td>
+                        <div class="alignright">
+                          <button ng-click="viewOrderDetail(order)" class="btn-dashboard">View Details</button>
+                        </div>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
               </div>
             </div>
           </div>
         </div>
+      </div>
       <!--</div>-->
     </div>
   </div>
@@ -61,52 +60,52 @@
 
 
 <script type="text/ng-template" id="viewOrderDetailModal.html">
-    <div class="modal-header">
-        <h3 class="modal-title">Customer Order on {{order.date | date:'yyyy-MM-dd' }}
-        <!--{{order.date.substring(0,10)}}--></h3>
+  <div class="modal-header">
+    <h3 class="modal-title">Customer Order on {{order.date | date:'yyyy-MM-dd' }}
+      <!--{{order.date.substring(0,10)}}-->
+    </h3>
+  </div>
+
+  <div class="modal-body">
+    <h4><b>Name:</b> {{order.firstName}} {{order.lastName}}</h4>
+    <h4><b>Phone:</b> {{order.phone}}</h4>
+    <h4><b>Order Time:</b> {{order.date | date: 'hh:mm a'}}</h4>
+  </div>
+
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Item Summary</h3>
     </div>
 
-    <div class="modal-body">
-        <h4><b>Name:</b> {{order.firstName}} {{order.lastName}}</h4>
-        <h4><b>Phone:</b> {{order.phone}}</h4>
-        <h4><b>Order Time:</b> {{order.date | date: 'hh:mm a'}}</h4>
-    </div>
-
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">Item Summary</h3>
-      </div>
-
-      <div class="panel-body">
-        <div class="table-responsive">
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th>Product</th>
-                <th>Unit Price</th>
-                <th>Quantity</th>
-                <th>Total Cost</th>
-              </tr>
-            </thead>
-            <tbody ng-repeat="item in order.items track by $index">
-              <tr>
-                <!--<td>{{$index + 1}}</td>-->
-                <td>{{item.product.name}}</td>
-                <td>${{item.product.unitPrice}} / {{item.product.unit}}</td>
-                <td>{{item.quantity}} {{item.product.unit}}</td>
-                <td>{{item.product.unitPrice * item.quantity}}</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+    <div class="panel-body">
+      <div class="table-responsive">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>Product</th>
+              <th>Unit Price</th>
+              <th>Quantity</th>
+              <th>Total Cost</th>
+            </tr>
+          </thead>
+          <tbody ng-repeat="item in order.items track by $index">
+            <tr>
+              <!--<td>{{$index + 1}}</td>-->
+              <td>{{item.product.name}}</td>
+              <td>${{item.product.unitPrice}} / {{item.product.unit}}</td>
+              <td>{{item.quantity}} {{item.product.unit}}</td>
+              <td>{{item.product.unitPrice * item.quantity}}</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
+  </div>
 
-
-    <div class="modal-footer">
-        <button class="btn-dashboard-green" type="button" ng-click="dismiss()">OK</button>
-    </div>
+  <div class="modal-footer">
+    <button class="btn-dashboard-green" type="button" ng-click="dismiss()">OK</button>
+  </div>
 </script>
 
 
@@ -116,78 +115,103 @@
   <div class="modal-header">
     <h3 class="modal-title text-center">Add an Order/Invoice</h3>
   </div>
-  <div class ="col-lg-12">
-  <div class="modal-body">
-    <form>
-    <fieldset class="form-group">
-      <div class ="col-lg-6">
-        <label>Product Name(s)</label>
-          <input class="form-control" ng-model="name" placeholder="ex. Salmon, Cod, Halibut">
-       </div>
+  <div class="col-lg-12">
+    <div class="modal-body">
+      <form>
+        <fieldset class="form-group">
+          <div class="col-lg-6">
+            <label>Product Name(s)</label>
+            <input class="form-control" ng-model="name" placeholder="ex. Salmon, Cod, Halibut">
+          </div>
 
-       <div class ="col-lg-6">
-         <label>Unit Price</label>
-           <input class="form-control" ng-model="unitPrice" placeholder="ex. $20.99/lb">
-           <small class="text-muted">Maximum 10 characters</small>
-        </div>
-</fieldset>
-<fieldset class="form-group">
-            <div class ="col-lg-6">
-              <label>Quantity</label>
-                <input class="form-control" ng-model="quantity" placeholder="ex. Salmon">
-                <small class="text-muted">Maximum 8 characters</small>
-             </div>
-             <div class ="col-lg-6">
-               <label>Total Amount</label>
-                 <input class="form-control" ng-model="totalAmount" placeholder="ex. $17.38">
-                 <small class="text-muted">Maximum 10 characters</small>
-              </div>
-</fieldset>
-
-      <fieldset class="form-group">
-      <div class ="col-lg-6">
-        <label>Invoice Number</label>
-        <input class="form-control" ng-model="invoiceNum" placeholder="ex. 109372">
-        <small class="text-muted">Maximum 20 characters.</small>
-      </div>
-      <div class ="col-lg-6">
-        <label>Payment Method</label>
-        <input class="form-control" ng-model="payMethod" placeholder="ex. Credit">
-        <small class="text-muted">Maximum 20 characters</small>
-      </div>
-      </fieldset>
-
-      <fieldset class="form-group">
-        <div class ="col-lg-6">
-          <label>Status</label>
-          <input class="form-control" ng-model="status" placeholder="ex. Outstanding">
-          <small class="text-muted">Maximum 20 characters</small>
-        </div>
-
-        <div class ="col-lg-6">
-          <label>Date and Time</label>
-          <input class="form-control" ng-model="dateTime" placeholder="ex. 12:44 PM, 2016-01-14">
-          <small class="text-muted">HH:MM PM, YYYY-MM-DD</small>
-        </div>
+          <div class="col-lg-6">
+            <label>Unit Price</label>
+            <input class="form-control" ng-model="unitPrice" placeholder="ex. $20.99/lb">
+            <small class="text-muted">Maximum 10 characters</small>
+          </div>
+        </fieldset>
+        <fieldset class="form-group">
+          <div class="col-lg-6">
+            <label>Quantity</label>
+            <input class="form-control" ng-model="quantity" placeholder="ex. Salmon">
+            <small class="text-muted">Maximum 8 characters</small>
+          </div>
+          <div class="col-lg-6">
+            <label>Total Amount</label>
+            <input class="form-control" ng-model="totalAmount" placeholder="ex. $17.38">
+            <small class="text-muted">Maximum 10 characters</small>
+          </div>
         </fieldset>
 
+        <fieldset class="form-group">
+          <div class="col-lg-6">
+            <label>Invoice Number</label>
+            <input class="form-control" ng-model="invoiceNum" placeholder="ex. 109372">
+            <small class="text-muted">Maximum 20 characters.</small>
+          </div>
+          <div class="col-lg-6">
+            <label>Payment Method</label>
+            <input class="form-control" ng-model="payMethod" placeholder="ex. Credit">
+            <small class="text-muted">Maximum 20 characters</small>
+          </div>
+        </fieldset>
 
-<!--
-      <fieldset class="form-group">
-      <div class ="col-lg-12">
-        <label>Description</label>
-        <input class="form-control" ng-model="description" placeholder="Enter a short product description">
-        <small class="text-muted">Maximum 100 characters</small>
-      </div>
-      </fieldset>-->
-    </form>
-   </div>
-   </div>
+        <fieldset class="form-group">
+          <div class="col-lg-6">
+            <label>Status</label>
+            <input class="form-control" ng-model="status" placeholder="ex. Outstanding">
+            <small class="text-muted">Maximum 20 characters</small>
+          </div>
+
+          <div class="col-lg-6">
+            <label>Date and Time</label>
+            <input class="form-control" ng-model="dateTime" placeholder="ex. 12:44 PM, 2016-01-14">
+            <small class="text-muted">HH:MM PM, YYYY-MM-DD</small>
+          </div>
+        </fieldset>
+
+        <div class="modal-body">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <div class="table-responsive">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Invoice #</th>
+                                    <th>Product</th>
+                                    <th>Batch</th>
+                                    <th>Unit Price</th>
+                                    <th>Quantity</th>
+                                    <th>Date</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody <!--ng-repeat="order in orders track by $index"-->>
+                                <tr>
+                                    <td><input class ="form-control"></input></td>
+                                    <td><select class="form-control" ng-model="selectedProduct" ng-options="product.name for product in products"></select></td>
+                                    <td><select class="form-control" ng-model="selectedBatch" ng-options="block.name for block in blocks"></select></td>
+                                    <td></td>
+                                    <td>{{block.dateCreated | date: 'short'}}</td>
+                                    <td>
+                                        <input type="radio" ng-model="$parent.selectedBlock" ng-value="$index">
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+      </form>
+    </div>
+  </div>
 
   <div class="modal-footer">
-  <div class="alignright">
-  <button type="submit" class="btn-dashboard-green" ng-click="ok()">Submit</button>
-  <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
-  </div>
+    <div class="alignright">
+      <button type="submit" class="btn-dashboard-green" ng-click="ok()">Submit</button>
+      <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
+    </div>
   </div>
 </script>
