--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -141,7 +141,7 @@
                 </div>
                 <div class="col-lg-6">
                     <label>Quantity</label>
-                    <input class="form-control" ng-model="quantity" placeholder="ex. 4000">
+                    <input class="form-control" ng-model="quantity" type="number" max="999" placeholder="ex. 4000">
                     <small class="text-muted">Please enter a numerical value.</small>
                 </div>
             </fieldset>
@@ -150,15 +150,15 @@
                 <div class="col-lg-6">
                     <label>Units</label>
                     <select name="mydropdown" class="form-control" ng-model="units">
-                        <option value="lb">Pounds (Lbs.)</option>
-                        <option value="kg">Kilograms (Kgs.)</option>
-                        <option value="unit">Per Unit of Fish</option>
+                        <option value="lb">lbs</option>
+                        <option value="kg">1/2 lbs</option>
+                        <option value="unit">Kg</option>
                     </select>
                     <small class="text-muted">Please choose between the three options.</small>
                 </div>
                 <div class="col-lg-6">
                     <label>Catch Date</label>
-                    <input class="form-control" ng-model="catchDate" placeholder="ex. 5/14/2016">
+                    <input class="form-control" ng-model="catchDate" type="date" placeholder="ex. 5/14/2016">
                     <small class="text-muted">MM/DD/YYYY</small>
                 </div>
             </fieldset>
@@ -209,61 +209,26 @@
                 <div class="col-lg-6">
                     <label>Product Type</label>
                     <br>
-                    <select class="from-control" ng-model="selectedProduct" ng-options="product.name for product in products"></select>
-                    <!--<select ng-model="selectedProduct" name="mydropdown" class="form-control">
-                 <option ng-value="{{product}}" ng-repeat="product in products track by $index">{{product.name}}</option>
-             </select>-->
+                    <select class="form-control" ng-model="selectedProduct" ng-options="product.name for product in products"></select>
                     <br>
                     <small class="text-muted">Item must be added under Products tab.</small>
                 </div>
                 <div class="col-lg-6">
                     <label>Quantity</label>
-                    <input class="form-control" ng-model="quantity" placeholder="ex. 4000">
+                    <input class="form-control" type="number" ng-model="quantity" placeholder="ex. 4000">
                     <small class="text-muted">Please enter a numerical value.</small>
                 </div>
             </fieldset>
-
+<!--
             <fieldset class="form-group">
                 <div class="col-lg-6">
                     <label>Units</label>
                     <select name="mydropdown" class="form-control" ng-model="units">
-                        <option value="lb">Pounds (Lbs.)</option>
-                        <option value="kg">Kilograms (Kgs.)</option>
-                        <option value="unit">Per Unit of Fish</option>
+                        <option value="lb">lbs</option>
+                        <option value="kg">1/2 lbs</option>
+                        <option value="unit">Kg</option>
                     </select>
                     <small class="text-muted">Please choose between the three options.</small>
-                </div>
-                <!--<div class="col-lg-6">
-                    <label>Catch Date</label>
-                    <input class="form-control" ng-model="catchDate" placeholder="ex. 5/14/2016">
-                    <small class="text-muted">MM/DD/YYYY</small>
-                </div>-->
-            </fieldset>
-
-
-            <!--<fieldset class="form-group">
-                <div class="col-lg-6">
-                    <label>Catch Region</label>
-                    <input class="form-control" ng-model="catchRegion" placeholder="ex. 48°N, 61.5°W, Gulf of St. Lawrence">
-                    <small class="text-muted">Latitude, Longitude, Ocean</small>
-                </div>
-                <div class="col-lg-6">
-                    <label>Caught By</label>
-                    <input class="form-control" ng-model="caughtBy" placeholder="ex. Joey Fisher">
-                    <small class="text-muted">Enter in the fisherman/fishery</small>
-                </div>
-            </fieldset>
-
-            <fieldset class="form-group">
-                <div class="col-lg-6">
-                    <label>Catch Type</label>
-                    <input class="form-control" ng-model="catchType" placeholder="ex. Gillnetting">
-                    <small class="text-muted">Enter the method of catching.</small>
-                </div>
-                <div class="col-lg-6">
-                    <label>Water Depth</label>
-                    <input class="form-control" ng-model="waterDepth" placeholder="ex. 500m">
-                    <small class="text-muted">Enter the water depth.</small>
                 </div>
             </fieldset>-->
         </form>
@@ -368,7 +333,7 @@
                         <tr>
                             <td>{{block.productType.name}}</td>
                             <td>{{block.quantity + " " + block.units}}</td>
-                            <td>{{block.catchDate}}</td>
+                            <td>{{block.catchDate | date:"yyyy-MM-dd"}}</td>
                             <td>{{block.catchRegion}}</td>
                             <td>{{block.caughtBy}}</td>
                             <td>{{block.catchType}}</td>
