--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -120,88 +120,90 @@
       <form>
         <fieldset class="form-group">
           <div class="col-lg-6">
-            <label>Product Name(s)</label>
-            <input class="form-control" ng-model="name" placeholder="ex. Salmon, Cod, Halibut">
-          </div>
-
-          <div class="col-lg-6">
-            <label>Unit Price</label>
-            <input class="form-control" ng-model="unitPrice" placeholder="ex. $20.99/lb">
-            <small class="text-muted">Maximum 10 characters</small>
-          </div>
-        </fieldset>
-        <fieldset class="form-group">
-          <div class="col-lg-6">
-            <label>Quantity</label>
-            <input class="form-control" ng-model="quantity" placeholder="ex. Salmon">
-            <small class="text-muted">Maximum 8 characters</small>
-          </div>
-          <div class="col-lg-6">
-            <label>Total Amount</label>
-            <input class="form-control" ng-model="totalAmount" placeholder="ex. $17.38">
-            <small class="text-muted">Maximum 10 characters</small>
-          </div>
-        </fieldset>
-
-        <fieldset class="form-group">
-          <div class="col-lg-6">
             <label>Invoice Number</label>
-            <input class="form-control" ng-model="invoiceNum" placeholder="ex. 109372">
-            <small class="text-muted">Maximum 20 characters.</small>
+            <input class="form-control" type="number" max="99999" ng-model="invoiceNum" placeholder="ex. 34937">
+            <small class="text-muted">Maximum 16 characters</small>
           </div>
           <div class="col-lg-6">
             <label>Payment Method</label>
-            <input class="form-control" ng-model="payMethod" placeholder="ex. Credit">
-            <small class="text-muted">Maximum 20 characters</small>
+            <input class="form-control" maxlength="16" ng-model="payMethod" placeholder="ex. Credit">
+            <small class="text-muted">Maximum 16 characters</small>
           </div>
         </fieldset>
 
         <fieldset class="form-group">
           <div class="col-lg-6">
             <label>Status</label>
-            <input class="form-control" ng-model="status" placeholder="ex. Outstanding">
-            <small class="text-muted">Maximum 20 characters</small>
+            <input class="form-control" type="text" maxlength="16"  ng-model="status" placeholder="ex. Outstanding">
+            <small class="text-muted">Maximum 16 characters</small>
           </div>
-
           <div class="col-lg-6">
             <label>Date and Time</label>
-            <input class="form-control" ng-model="dateTime" placeholder="ex. 12:44 PM, 2016-01-14">
-            <small class="text-muted">HH:MM PM, YYYY-MM-DD</small>
+            <input class="form-control" type="date" ng-model="dateTime" placeholder="ex. 12:44 PM, 2016-01-14">
+            <small class="text-muted">Enter the invoice date</small>
           </div>
         </fieldset>
 
         <div class="modal-body">
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <div class="table-responsive">
-                        <table class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th>Invoice #</th>
-                                    <th>Product</th>
-                                    <th>Batch</th>
-                                    <th>Unit Price</th>
-                                    <th>Quantity</th>
-                                    <th>Date</th>
-                                    <th></th>
-                                </tr>
-                            </thead>
-                            <tbody <!--ng-repeat="order in orders track by $index"-->>
-                                <tr>
-                                    <td><input class ="form-control"></input></td>
-                                    <td><select class="form-control" ng-model="selectedProduct" ng-options="product.name for product in products"></select></td>
-                                    <td><select class="form-control" ng-model="selectedBatch" ng-options="block.name for block in blocks"></select></td>
-                                    <td></td>
-                                    <td>{{block.dateCreated | date: 'short'}}</td>
-                                    <td>
-                                        <input type="radio" ng-model="$parent.selectedBlock" ng-value="$index">
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <div class="table-responsive">
+                <table class="table table-striped">
+                  <thead>
+                    <tr>
+                      <th>Product</th>
+                      <th>Batch (M/D/Y)</th>
+                      <th>Unit Price</th>
+                      <th>Units</th>
+                      <th>Quantity</th>
+                      <th></th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <!--ng-repeat="order in orders track by $index"-->
+                    <tr>
+                      <td>
+                        <select class="form-control">
+                        <option>Pacific Cod</option>
+                        <option>Atlantic Salmon</option>
+                        </select>
+                      </td>
+
+                      <td>
+                        <select class="form-control">
+                          <!--ng-model="selectedBlock" ng-options="block.name for block in blocks"-->
+                          <option>2/14/16 (20 lbs)</option>
+                          <option>2/24/16 (143 lbs)</option>
+                          <option>3/4/16 (200 lbs)</option>
+                        </select>
+                      </td>
+
+                      <td>
+                      <input type="number" min="0" max="100" ng-model="listing.price" step="0.01" class="form-control" placeholder="ex. 12.99"></input>
+                      </td>
+
+                      <td>
+                        <select class="form-control">
+                          <option>lbs</option>
+                          <option>Kg</option>
+                          <option>1/2 lbs</option>
+                        </select>
+                      </td>
+
+                      <td>
+                      <input type="number" min="0" max="100" ng-model="listing.quantity" value="1" class="form-control" placeholder="ex. 10"></input>
+                      </td>
+
+                      <td>
+                        <button class="btn-dashboard-green"><i class="fa fa-plus"></i></btn>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+                <h3 class="text-right">Total: ${{order}}</h3>
+              </div>
             </div>
+          </div>
         </div>
 
       </form>
