form validation and block detail fix

--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -184,9 +184,9 @@
 
                       <td>
                         <select class="form-control">
-                          <option>lbs</option>
-                          <option>Kg</option>
-                          <option>1/2 lbs</option>
+                          <option value="lbs">lbs</option>
+                          <option value="half lbs">1/2 lbs</option>
+                          <option value="kg">kg</option>
                         </select>
                       </td>
 
