--- a/src/views/dashboard.default.sales-management.menu.html
+++ b/src/views/dashboard.default.sales-management.menu.html
@@ -1,9 +1,7 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <h2 class="page-header light-text">Sales Management</h2>
     <div class="row placeholders">
-      <!--
         <div class="col-lg-8">  CENTER ON COMPUTER SCREEN
-        -->
             <div ng-controller="SalesManagementMenuCtrl" class="container">
 
                 <div class="panel-container">
@@ -33,7 +31,7 @@
                         </div>
                     </div>
                 </div>
-            <!--</div>-->
+            </div>
         </div>
     </div>
 </div>
