--- a/src/views/dashboard.default.supply-chain.create.html
+++ b/src/views/dashboard.default.supply-chain.create.html
@@ -11,7 +11,7 @@
                   <br>
                   <div class="col-lg-8 col-lg-offset-2">
                   <label>Name of Supply Chain</label>
-                    <input class="form-control" ng-model="name" placeholder="ex. Joseph's Supply Chain">
+                    <input class="form-control" ng-model="name" maxlength="30" placeholder="ex. Joseph's Supply Chain">
                     <small class="text-muted">Maximum 30 characters.</small>
                   </div>
                 </fieldset>
