--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -123,7 +123,7 @@
 <script type="text/ng-template" id="editProductModal.html">
 
   <div class="modal-header">
-    <h3 class="modal-title text-center">Edit "{{name}}"</h3>
+    <h3 class="modal-title text-center">Edit {{name}}</h3>
   </div>
   <div class ="col-lg-12">
   <div class="modal-body">
@@ -131,13 +131,13 @@
       <fieldset class="form-group">
       <div class ="col-lg-6">
         <label>Product Name</label>
-        <input class="form-control" ng-model="name" placeholder="ex. Atlantic Cod">
-        <small class="text-muted">Maximum 20 characters.</small>
+        <input class="form-control" ng-model="name" maxlength="25" placeholder="ex. Atlantic Cod">
+        <small class="text-muted">Maximum 25 characters.</small>
       </div>
       <div class ="col-lg-6">
         <label>Unit Price</label>
-        <input class="form-control" ng-model="unitPrice" placeholder="ex. 4.50">
-        <small class="text-muted">Maximum 3 characters</small>
+        <input class="form-control" ng-model="unitPrice" step="0.01" type="number" placeholder="ex. 4.50">
+        <small class="text-muted">Enter in $XX.xx format</small>
       </div>
       </fieldset>
 
@@ -180,8 +180,8 @@
       <fieldset class="form-group">
       <div class ="col-lg-12">
         <label>Description</label>
-        <input class="form-control" ng-model="description" placeholder="Enter a short product description">
-        <small class="text-muted">Maximum 100 characters</small>
+        <input class="form-control" ng-model="description" maxlength="60" placeholder="Enter a short product description">
+        <small class="text-muted">Maximum 60 characters</small>
       </div>
       </fieldset>
     </form>
