--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -11,9 +11,6 @@
             </div>
           </div>
           <div ng-controller="SupplyChainDisplayCtrl" class="panel panel-default">
-            <!-- <div class="panel-heading">
-                            <h3 class="panel-title">Supply Chain Representation</h3>
-                        </div> -->
             <div class="panel-body" style="height:500px">
               <vis-network-track data="data" options="options" events="events" height="500px"></vis-network-track>
             </div>
@@ -24,7 +21,7 @@
   </div>
 </div>
 
-<!-- THIS IS THE INSTRUCTIONS MODAL -->
+<!-- THIS IS THE INSTRUCTIONS MODAL
 
 <div class="modal fade" id="helpModal" role="dialog">
   <div class="modal-dialog modal-lg">
@@ -61,7 +58,7 @@
       </div>
     </div>
   </div>
-</div>
+</div>-->
 
 <script type="text/ng-template" id="viewBlocksModal.html">
   <div class="modal-header">
