--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -271,7 +271,7 @@
 
   </div>
   <div class="modal-footer">
-    <button class="btn-dashboard-green" type="button" ng-click="ok()">OK</button>
+    <button class="btn-dashboard-green" type="button" ng-click="ok()">Save</button>
     <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
   </div>
 </script>
