Replace Products with ProductData

--- a/src/views/dashboard.default.overview.html
+++ b/src/views/dashboard.default.overview.html
@@ -43,7 +43,7 @@
                           <i class="fa fa-money fa-5x"></i>
                         </div>
                         <div class="col-xs-9 text-right">
-                          <div>Your Seafood Products</div>
+                          <div>Your Seafood ProductData</div>
                           <div ng-show="product in products" class="huge">132</div>
                         </div>
                       </div>
@@ -66,7 +66,7 @@
                           <i class="fa fa-link fa-5x"></i>
                         </div>
                         <div class="col-xs-9 text-right">
-                          <div>Products in Value Chain</div>
+                          <div>ProductData in Value Chain</div>
                           <div ng-show="product in products" class="huge">56</div>
                         </div>
                       </div>
