--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -135,7 +135,7 @@
                 <fieldset class="form-group">
                     <div class="col-lg-4">
                         <label>Invoice Number</label>
-                        <input class="form-control" type="number" max="99999" ng-model="invoiceNumber" placeholder="ex. 34937">
+                        <input class="form-control" type="number" ng-model="invoiceNumber" placeholder="ex. 34937">
                         <small class="text-muted">Maximum 16 characters</small>
                     </div>
                     <div class="col-lg-4">
@@ -166,12 +166,12 @@
                     </div>
                     <div class="col-lg-4">
                         <label>Credit Terms (in Days)</label>
-                        <input class="form-control" type="number" max="99999" ng-model="creditTerms" placeholder="ex. 34937">
+                        <input class="form-control" type="number" max="99999" ng-model="creditTerms" placeholder="ex. 12">
                         <small class="text-muted">Enter the invoice date</small>
                     </div>
                     <div class="col-lg-4">
                         <label>Phone Number</label>
-                        <input class="form-control" maxlength="10" ng-model="phone" placeholder="ex. 1112223333">
+                        <input class="form-control" maxlength="10" ng-model="phone" placeholder="ex. 7781921231">
                         <small class="text-muted">Maximum 10 characters. No spaces or dashes.</small>
                     </div>
                 </fieldset>
