--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -23,10 +23,10 @@ $primary-font-color: #000;
 $hyperlink-font-color: #fff;
 $primary-border-color: #CFD8DC;
 $primary-font: "Lato Light", "Open Sans", "Helvetica", "Roboto";
-$navbar-color: #455A64;
+$navbar-color: #01579B;
 $side-nav-color: #CFD8DC;
-$btn-color: #607D8B;
-$btn-hover-color: #455A64;
+$btn-color: #01579B;
+$btn-hover-color: #1A237E;
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
   -moz-border-radius: $radius;
