--- a/src/views/dashboard.help.html
+++ b/src/views/dashboard.help.html
@@ -9,9 +9,10 @@
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="panel-heading">
-              <h1>Coastline Quick Start Guide</h1><br>
-               <a class="btn-dashboard-green" href="../img/coastline-guide.pdf">PDF Version</a>
-</h1>
+              <h1>Coastline Quick Start Guide</h1>
+              <br>
+              <a class="btn-dashboard-green" href="../img/coastline-guide.pdf">PDF Version</a>
+              </h1>
               <hr class="short">
             </div>
             <div class="row">
@@ -71,8 +72,7 @@
                   <h4>4. Once the target intermeidary is highlighted, click <i>View/Edit Inventory</i></h4>
                   <h4>5. Click the inventory batch you wish to move</h4>
                   <h4>6. Click the <i>Move</i> button</h4>
-                  <h4>7. From the <i>Move to Stage</i> dropdown, choose the intermediary that inventory
-is being moved to</h4>
+                  <h4>7. From the <i>Move to Stage</i> dropdown, choose the intermediary that inventory is being moved to</h4>
                   <h4>5. Click the <i>OK</i> button</h4>
               </div>
               <div class="col-lg-6">
