--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -1,32 +1,34 @@
 <div ng-controller="NavTopCtrl">
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" ng-model="fisheryName" ui-sref=".default.products">{{fisheryName}}</a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <!-- NO NEED FOR OVERVIEW PAGE <li><a href="#">Home</a></li> -->
-                    <li class="hide"><a ui-sref=".default.products">Products</a></li>
-                    <li class="hide"><a ui-sref=".default.supply-chain.menu">Supply Chain</a></li>
-                    <li class="hide"><a ui-sref=".default.inventory.menu">Inventory</a></li>
-                    <li class="hide"><a ui-sref=".default.sales-management.menu">Sales Channel</a></li>
-                    <li class="hide"><a ui-sref=".default.orders">Orders</a></li>
-                    <li><a ui-sref=".default.products">Home</a></li>
-                    <!--REMOVE UNTIL SETTINGS FEATURES IMPLEMENTED
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" ng-model="fisheryName" ui-sref=".default.overview">
+          <img src="../img/coastline-logo.png" alt="coastline  logo"> {{fisheryName}}
+        </a>
+      </div>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <!-- NO NEED FOR OVERVIEW PAGE <li><a href="#">Home</a></li> -->
+          <li class="hide"><a ui-sref=".default.products">Products</a></li>
+          <li class="hide"><a ui-sref=".default.supply-chain.menu">Supply Chain</a></li>
+          <li class="hide"><a ui-sref=".default.inventory.menu">Inventory</a></li>
+          <li class="hide"><a ui-sref=".default.sales-management.menu">Sales Channel</a></li>
+          <li class="hide"><a ui-sref=".default.orders">Orders</a></li>
+          <li><a ui-sref=".default.overview">Home</a></li>
+          <!--REMOVE UNTIL SETTINGS FEATURES IMPLEMENTED
                     <li><a ui-sref=".settings">Settings</a></li>-->
-                    <li><a ui-sref=".help">Help</a></li>
-                    <li><a ng-click="logout()" href="#">Logout</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+          <li><a ui-sref=".help">Help</a></li>
+          <li><a ng-click="logout()" href="#">Logout</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 </div>
 
 <div ui-view></div>
