overview tab work

--- a/src/views/dashboard.default.overview.html
+++ b/src/views/dashboard.default.overview.html
@@ -1,15 +1,13 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-  <h2 class="page-header light-text">Upcoming Collections</h2>
+  <h2 class="page-header light-text">Home</h2>
   <div class="row placeholders">
-    <!--
-        <div class="col-lg-8">  CENTER ON COMPUTER SCREEN
-        -->
     <div class="container">
       <div class="panel-container">
         <div class="panel panel-default">
           <div class="panel-body">
-
-            <div class="panel-scroll">
+            <div class="panel-header"><h3>Upcoming Payments Due
+</h3><hr class="short"></div>
+        <!--    <div class="panel-scroll">-->
               <div class="table-responsive">
                 <table class="table tableWhite">
                   <thead>
@@ -85,44 +83,15 @@
                       <td>1/11/2016</td>
                       <td>$25.94</td>
                     </tr>
-                    <tr>
-                      <td>1,003</td>
-                      <td>Paypal</td>
-                      <td>Completed</td>
-                      <td>1/11/2016</td>
-                      <td>$364.99</td>
-                    </tr>
-                    <tr>
-                      <td>1,002</td>
-                      <td>Paypal</td>
-                      <td>Completed</td>
-                      <td>1/11/2016</td>
-                      <td>$364.99</td>
-                    </tr>
-                    <tr>
-                      <td>1,001</td>
-                      <td>Paypal</td>
-                      <td>Completed</td>
-                      <td>1/11/2016</td>
-                      <td>$364.99</td>
-                    </tr>
-                    <tr>
-                      <td>1,000</td>
-                      <td>Paypal</td>
-                      <td>Completed</td>
-                      <td>1/11/2016</td>
-                      <td>$364.99</td>
-                    </tr>
 
                   </tbody>
                 </table>
               </div>
             </div>
 
-          </div>
+  <!--        </div>-->
         </div>
       </div>
     </div>
-    <!--</div>-->
   </div>
 </div>
