overview page restructure

--- a/src/views/dashboard.default.overview.html
+++ b/src/views/dashboard.default.overview.html
@@ -5,9 +5,12 @@
       <div class="panel-container">
         <div class="panel panel-default">
           <div class="panel-body">
-            <div class="panel-header"><h3>Upcoming Payments Due
-</h3><hr class="short"></div>
-        <!--    <div class="panel-scroll">-->
+            <div class="panel-header">
+            </div>
+            <!--    <div class="panel-scroll">-->
+            <div class="col-lg-6">
+              <h3>Payments Due in One Week</h3>
+              <hr class="short">
               <div class="table-responsive">
                 <table class="table tableWhite">
                   <thead>
@@ -20,20 +23,6 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
-                      <td>1,012</td>
-                      <td>Credit Card</td>
-                      <td>Outstanding</td>
-                      <td>1/13/2016</td>
-                      <td>$67.99</td>
-                    </tr>
-                    <tr>
-                      <td>1,011</td>
-                      <td>Credit Card</td>
-                      <td>Completed</td>
-                      <td>1/12/2016</td>
-                      <td>$125.15</td>
-                    </tr>
                     <tr>
                       <td>1,010</td>
                       <td>Subscription Pickup</td>
@@ -76,20 +65,37 @@
                       <td>1/11/2016</td>
                       <td>$144.43</td>
                     </tr>
-                    <tr>
-                      <td>1,004</td>
-                      <td>Paypal</td>
-                      <td>Completed</td>
-                      <td>1/11/2016</td>
-                      <td>$25.94</td>
-                    </tr>
-
                   </tbody>
                 </table>
               </div>
             </div>
 
-  <!--        </div>-->
+            <div class="col-lg-6">
+              <h3>Payments Due in Two Weeks</h3>
+              <hr class="short">
+              <div class="table-responsive">
+                <table class="table tableWhite">
+                  <thead>
+                    <tr>
+                      <th>Invoice #</th>
+                      <th>Payment Method</th>
+                      <th>Status</th>
+                      <th>Date (MM/DD/YYYY)</th>
+                      <th>Total Amount</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>1,010</td>
+                      <td>Subscription Pickup</td>
+                      <td>Completed</td>
+                      <td>1/12/2016</td>
+                      <td>N/A</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
         </div>
       </div>
     </div>
